--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
 logo: /assets/img/521D2AD1-978F-45A6-A9D0-580A63B52990.png
-title: "HCR2 REFERENCE"
+title: "HCR2 Reference"
 google_analytics: G-SFJ80L12D6
