--- a/_config.yml
+++ b/_config.yml
@@ -10,4 +10,4 @@ buttonone:  <a href=".\#best-distance-parts-by-vehicle">Adventure <strong>Parts<
 buttontwo: <a href=".\#tracks-by-map-type-and-distance">Cup <strong>Tracks</strong></a> 
 buttonthree: <a href=".\#daily-checklist">Daily <strong>Checklist</strong></a>           
 footerone:  <a href=".\#team-philosophy"><img src="https://cdn.discordapp.com/attachments/806343355264401478/820076457690398751/GBG-team-logo-125.png" alt="Gas Brake Go"/></a>
-footertwo:  <a href="mailto:dadahcr2@gmail.com">Email</a> ~ dada#1710 ~ <a href="https://rentry.co/hcom1">Comment? ~ </a>~ <a href="#top">🔝</a> 
+footertwo:  <a href="mailto:dadahcr2@gmail.com">Email</a> ~ dada#1710 ~ <a href="https://rentry.co/hcom1">Comment?</a> ~ <a href="#top">🔝</a> 
